--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,12 @@
+container_commands:
+    01_sh_executable:
+        command: find .platform/hooks/ -type f -iname "*.sh" -exec chmod +x {} \;
+    
+
 option_settings:
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: textattackwebdemo.wsgi:application
+    aws:elasticbeanstalk:application:environment:
+        DJANGO_SETTINGS_MODULE: textattackwebdemo.settings
+    aws:elasticbeanstalk:container:python:
+        WSGIPath: textattackwebdemo.wsgi:application
+    aws:elasticbeanstalk:environment:proxy:staticfiles:
+        /static/: staticfiles/
