textattack install on eb

--- a/.ebextensions/01_psycop.config
+++ b/.ebextensions/01_psycop.config
@@ -3,6 +3,7 @@ packages:
         git: []
         postgresql-devel: []
         libjpeg-turbo-devel: []
+        python-psycopg2: []
 
 commands:
     01_postgres_activate:
