--- a/.ebextensions/02_textattack.config
+++ b/.ebextensions/02_textattack.config
@@ -2,4 +2,4 @@ commands:
     01_textattack:
         command: 'source /var/app/venv/*/bin/activate && pip install --upgrade setuptools'
     02_textattack:
-        command: 'source /var/app/venv/*/bin/activate && pip install --no-cache textattack'
+        command: 'source /var/app/venv/*/bin/activate && git clone https://github.com/QData/TextAttack.git && cd TextAttack && python setup.py'
