--- a/.ebextensions/02_textattack.config
+++ b/.ebextensions/02_textattack.config
@@ -2,6 +2,8 @@ commands:
     01_textattack:
         command: 'source /var/app/venv/*/bin/activate && pip install --upgrade setuptools'
     02_textattack:
-        command: 'git clone https://github.com/QData/TextAttack.git'
+        command: 'rm -rf /TextAttack'
     03_textattack:
-        command: 'source /var/app/venv/*/bin/activate && cd TextAttack && python setup.py'
+        command: 'git clone https://github.com/QData/TextAttack.git'
+    04_textattack:
+        command: 'source /var/app/venv/*/bin/activate && cd /TextAttack && pip install --no-cache .'
