--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,10 +1,14 @@
 container_commands:
-    01_sh_executable:
+    01_collectstatic:
+        command: "python3 manage.py collectstatic --noinput"
+        leader_only: true
+    02_sh_executable:
         command: find .platform/hooks/ -type f -iname "*.sh" -exec chmod +x {} \;
     
-
 option_settings:
     aws:elasticbeanstalk:application:environment:
         DJANGO_SETTINGS_MODULE: textattackwebdemo.settings
     aws:elasticbeanstalk:container:python:
         WSGIPath: textattackwebdemo.wsgi:application
+    aws:elasticbeanstalk:container:python:staticfiles:
+        "/static": "static/"
