--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -7,8 +7,8 @@ container_commands:
     
 option_settings:
     aws:elasticbeanstalk:application:environment:
-        DJANGO_SETTINGS_MODULE: textattackwebdemo.settings
+        DJANGO_SETTINGS_MODULE: textattackwebdemo.se ttings
     aws:elasticbeanstalk:container:python:
         WSGIPath: textattackwebdemo.wsgi:application
-    aws:elasticbeanstalk:container:python:staticfiles:
+    aws:elasticbeanstalk:environment:proxy:staticfiles:
         "/static": "static/"
