--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,14 +1,15 @@
 container_commands:
-    01_collectstatic:
-        command: "python3 manage.py collectstatic --noinput"
-        leader_only: true
-    02_sh_executable:
+    01_sh_executable:
         command: find .platform/hooks/ -type f -iname "*.sh" -exec chmod +x {} \;
     
 option_settings:
     aws:elasticbeanstalk:application:environment:
-        DJANGO_SETTINGS_MODULE: textattackwebdemo.se ttings
+        DJANGO_SETTINGS_MODULE: textattackwebdemo.settings
     aws:elasticbeanstalk:container:python:
         WSGIPath: textattackwebdemo.wsgi:application
+        NumProcesses: 3
+        NumThreads: 20
     aws:elasticbeanstalk:environment:proxy:staticfiles:
-        "/static": "static/"
+        "/static": "webdemo/static/"
+    aws:elb:policies:
+        ConnectionSettingIdleTimeout: 300
