--- a/.platform/nginx/conf.d/01_myconfig.conf
+++ b/.platform/nginx/conf.d/01_myconfig.conf
@@ -1,4 +1,5 @@
-proxy_send_timeout 300;
-send_timeout 300;
-fastcgi_send_timeout 300; 
-fastcgi_read_timeout 300;
+keepalive_timeout 900s;
+proxy_connect_timeout 900s;
+proxy_send_timeout 900s;
+proxy_read_timeout 900s;
+send_timeout 900s;
